--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.debug {
+  border: 1px solid red;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.linea{
+  @apply bg-gray-300 h-px w-3/4 mx-auto mt-14;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.linea_2{
+  @apply bg-gray-300 h-px w-3/4 mx-auto mt-6;
+}
+
+.titulo-sidebar{
+  @apply text-lg font-semibold my-2;
+}
+
+.useStyless{
+  background-color: orange;
 }
